<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0DEF3"
    tools:context=".Signup_page">

    <Button
        android:id="@+id/add"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:text="Send otp"
        android:textAllCaps="true"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/number"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/glass"
        android:ems="10"
        android:hint="+91-XXXXXXXXXX"
        android:maxLength="10"
        android:inputType="numberDecimal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/otp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/otp"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/glass"
        android:ems="10"
        android:hint="NAME"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@drawable/rounded"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="Sign up"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36dp"
        app:layout_constraintStart_toStartOf="@+id/otp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/glass"
        android:ems="10"
        android:hint="EMAIL"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="306dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/glass"
        android:ems="10"
        android:hint="PASSWORD"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/number" />

</androidx.constraintlayout.widget.ConstraintLayout>