...
        app:layout_constraintEnd_toEndOf="@+id/otp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/otp"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:text="sign in"
        android:textAllCaps="true"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="sign up"
        android:textAllCaps="true"
        android:textSize="15dp"
...
